# helix-type-gen

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
examples/: README.md  helix-client.ts  helix-types.ts  index.ts  package.json
examples/helixdb-cfg/: queries.hx  schema.hx
scripts/: install.sh
src/: connection.rs  error.rs  introspector.rs  lib.rs  main.rs  schema.rs  ts_generator.rs  utils.rs
