[package]
name = "helix-ts-gen"
version = "0.0.1"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.42", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
